# keyboard-hook

./: .gitignore  install.sh  keyboard-hook-service.sh  keyboard-hook.service  readme.md
Reader/: CMakeLists.txt
Reader/source/: EventHandler.cpp  EventHandler.hpp  hook.cpp  hook.hpp  main.cpp
Writer/: Makefile
Writer/source/: DeviceInfoBuffer.c  DeviceInfoBuffer.h  InputKeyboard.c  InputKeyboard.h  LinuxKeyboardHookWriter.c  OutputKeyboard.c  OutputKeyboard.h  device_info_buffer.c  device_info_buffer.h  handleEvents.c  handleEvents.h  input_keyboard.c  input_keyboard.h  keyboard_hook_writer.c  mymodule.c  output_keyboard.c  output_keyboard.h
tools/autostart/: LinuxKeyboardHookWriter.conf  Memo.md  keyboard_hook_reader.desktop
